K8/manifests/redis-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    name: redis
  name: redis
  namespace: default
spec:
  containers:
  - args:
    - --requirepass
    - $(REDIS_PASSWORD)
    command:
    - redis-server
    image: redis:5.0.4
    imagePullPolicy: IfNotPresent
    name: redis
    ports:
    - containerPort: 6379
      protocol: TCP
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
