K8/manifests/uploader-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    name: uploader
  name: uploader
  namespace: default
spec:
  containers:
  - image: quay.io/marwan_attar_ibm/wmla-file-uploader
    imagePullPolicy: Always
    name: uploader
    ports:
    - containerPort: 8080
      protocol: TCP
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    securityContext:
      runAsUser: 1234
      runAsGroup: 5678
    volumeMounts:
    - mountPath: /var/run/data
      name: data
  serviceAccountName: uploader-sa
  securityContext:
    fsGroup: 5555
    supplementalGroups: [5777, 5888]
  volumes:
  - name: data
    persistentVolumeClaim:
      claimName: uploader-pvc
  restartPolicy: Always
  schedulerName: default-scheduler
