K8/manifests/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: default
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    name: redis
  sessionAffinity: None
  type: ClusterIP
