K8/manifests/uploader-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uploader
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: uploader
  sessionAffinity: None
  type: ClusterIP
