K8/manifests/uploader-route-secure.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: uploader-route-secure
  namespace: default
spec:
  to:
    kind: Service
    name: uploader
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
