K8/manifests/uploader-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: uploader-route
  namespace: default
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: uploader
    weight: 100
  wildcardPolicy: None
