K8/manifests/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: uploader-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      name: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              project: default
          podSelector:
            matchLabels:
              name: uploader
      ports:
        - protocol: TCP
          port: 6379
